# rose

./: .gitignore  .gitlab-binary-analysis.yml  .gitlab-ci.yml  .gitlab-fullrelease.yaml  .gitmodules  AUTHORS  BuildingRoseOnAMac.txt  CMAKE_MIGRATION_PLAN.md  CMakeLists.txt  COPYRIGHT  ChangeLog  ChangeLog2  DO_NOT_MERGE  DT_NOTES.html  DT_NOTES.txt  EMAIL_INTRODUCTION  INSTALL.txt  LICENSE  Makefile.am  NEWS  NOTES_FOR_OSX  NOTICE  ProjectPlan.txt  RC_1096b.c  README  README-tutorial  README.Cygwin  README.Debian  README.OSX  README.OSX.notes  README.compass  README.git  README.hudson  README.intel  README.java  README.md  README.static_and_dynamic_analysis_tools  README.svn  README.windows  README_CHECKIN  (+88 more)
GNU_HEADERS/hdrs1/: Makefile.am  tempFile
binaries/samples/: CMakeLists.txt  Makefile.am  SpecimenSets.inc  Specimens.inc  arm-nologin  arm-pivot_root  arm-poweroff  fnord.ppc  i386-dataflow  i386-dataflow.s  i386-fcalls  i386-fcalls.s  i386-fnstsw.s  i386-int3  i386-int3.s  i386-may-return-tests.s  i386-mixed.s  i386-mov  i386-mul  i386-mul.s  i386-noop  i386-noop.s  i386-overlap  i386-pivot_root  i386-pop.s  i386-poweroff  i386-pushfd  i386-pushfd.s  i386-thunks-7  i386-tricky-cfg.s  memreadwrite  pentium-movd  pentium-xmm  pentium-xmm.s  usedef  usedef.s  vm-final.raw  x86-64-ctrlaltdel  x86-64-nologin  x86-64-poweroff
cmake-integration/01-basic-cmake/: CMakeLists.txt  test.sh  test_basic_rose.cpp
cmake-integration/02-version-check/: CMakeLists.txt  CMakeLists_min.txt  test.sh  test_version.cpp
config/: Builtins.def  Builtins_EDG_49.def  CMakeLists.txt  EDG.m4  Makefile.am  Makefile.for.ROSE.includes.and.libs  Python-version-2.2.h  QMTest_makefile.inc  ROSE.m4  SCM_DATE  ac_check_class.m4  ac_check_classpath.m4  ac_check_rqrd_class.m4  ac_java_options.m4  ac_jni_include_dir.m4  ac_pkg_swig.m4  ac_prog_jar.m4  ac_prog_java.m4  ac_prog_java_works.m4  ac_prog_javac.m4  ac_prog_javac_works.m4  ac_try_compile_java.m4  acinclude.m4  acx_libxml2.m4  automake_conditional_display_makefile  ax_boost.m4  ax_boost_asio.m4  ax_boost_atomic.m4  ax_boost_base.m4  ax_boost_chrono.m4  ax_boost_date_time.m4  ax_boost_filesystem.m4  ax_boost_iostreams.m4  ax_boost_program_options.m4  ax_boost_python.m4  ax_boost_random.m4  ax_boost_regex.m4  ax_boost_serialization.m4  ax_boost_signals.m4  ax_boost_system.m4  (+179 more)
demo/: CMakeLists.txt  Makefile.am  demo.txt
demo/qrose/: CMakeLists.txt  Makefile.am  Makefile.in  icons.h  t1_window.C  t2_layout.C  t3_buttons.C  t4_events.C  t5_components.C  t6_query1.C  t7_qtcompat.C  test.C
docs/: CMakeLists.txt  CMakeModernizationPlan.md  Makefile.am  README  RoseUser.cfg  cmake-integration.md  developer.cfg  user.cfg
docs/DoxygenSettings/: AutogenOutput.cfg  ClassList.cfg  DocbookOutput.cfg  Dot.cfg  Examples.cfg  ExternalReferences.cfg  Grouping.cfg  HtmlOutput.cfg  InputFiles.cfg  Language.cfg  LatexOutput.cfg  Layout.cfg  ManpageOutput.cfg  OutputFiles.cfg  OutputFormats.cfg  Parsing.cfg  PathRewrites.cfg  PerlmodOutput.cfg  Preprocessor.cfg  Project.cfg  README  RtfOutput.cfg  Scope.cfg  SourceBrowsing.cfg  Warnings.cfg  XmlOutput.cfg
docs/IDE-Hints/: README  XEmacs
docs/Rose/: FAQ.html  (+97 more)
exampleTranslators/: CMakeLists.txt  Makefile.am
projects/: CMakeLists.txt  Makefile.am  README.md  RoseStyleGuide.txt  SemanticSignatureVectors.README  assemblyToSourceAst.README  projects.docs  simulator.README
scripts/: 2017-03-ROSE-Unbuntu-16.04-VM-setup.sh  CMakeLists.txt  Makefile.am  PatchSyntax.txt  README  Tupfile  absolute-paths  addCopyWrite.pl  addDistributionFile  autoPar.html  autoconf-filter.pl  bincompat-sig  blame-count  buildEDGBinaryFiles.sh  buildExampleRoseWorkspaceScript.sh  build_boost  builtinLlvmFunctions.pl  capitalizeFirstLetter  changingCompilers.txt  check-dist-file  check-enums  check-generated-files.sh  checkCarriageReturn.sh  checkForInvalidHeaders.sh  checkForInvalidSourceFiles.sh  checkMakeParallelism.pl  checkMakeParallelism.sh  checkMakeSpew.pl  check_boost_linkage.sh  clean_qm_database.sh  compile-times.pl  configure_typical  configure_with_MSWindows  configure_with_QRose  configure_with_SQL  configure_with_assemblySemantics  configure_with_boost_wave  configure_with_fortran  configure_with_maple  configure_with_roseTranslator  (+209 more)
src/: CMakeLists.txt  Makefile.am  Makefile.am-new  Makefile.am-old  README  RoseFirst.h  Tupfile  dummyCppFileForLibrose.C  extra.docs  featureTests.C  featureTests.h  fileList.coverity  inputForTestRoseLib.c  rose-compiler.C  rose-config.C  rose.h  roseCompiler.C  roseInternal.h  roseTranslatorToTestBuild.C  rose_msvc.h  testRoseLib.C
tests/: CMakeLists.txt  KeepGoingTranslator.cpp  Makefile.am  Makefile.am-old  README  inputFile.C  parallelASTMerge.C  testAnalysis.C  testAstFileIO.C  testAstFileRead.C  testAtermGraphGeneration.C  testCodeGeneration.C  testDataMemberOfConst.C  testFortranParameter.C  testFrontEnd.C  testGraphGeneration.C  testParser.C  testTemplates.C  testTokenGeneration.C  testTranslator.C  testTranslatorUnfoldedConstants.C  tests.tex
tools/: CMakeLists.txt  Makefile.am  README  c++-to-bash.C  cocorpp  cpp2beauty  cpp2ps  lsviz  makefile.external  moveDeclarationToInnermostScope.C  rajaChecker.C
tutorial/: ASTGraphGenerator.C  ASTGraphGeneratorCustomized.C  AST_PDF_Generator.C  CMakeLists.txt  CharmNotes.txt  CharmSupport.C  DoxygenExample.dox  LoopProcessor.C  Makefile.am  SampleMakefile  TODO.txt  Tupfile  abstractHandle1.cpp  abstractHandle2.cpp  accumulatorAttributeTraversal.C  acumulatorAttributeTraversal.C  addArbitraryTextForUnparser.C  addAssignmentStmt.C  addComments.C  addExpression.C  addFunctionCalls.C  addFunctionDeclaration.C  addFunctionDeclaration2.C  addFunctionDeclaration3.C  addStruct.C  addVariableDeclaration.C  addVariableDeclaration2.C  astFileIO_GenerateBinaryFile.C  astFileIO_ReadMultipleASTs.C  attributeCopyExamples.C  bin_example.C  binaryAnalysis.C  binaryAnalysisExample.C  binaryAnalysis_symbolTable.C  binaryAttribute.C  binaryCFGPointToPointTutorial.C  binaryCFGTraversalTutorial.C  binaryCallGraph.C  binaryDominance.C  binaryFileRead.C  (+178 more)
(+45366 files in other folders)
